# BoschFutureMobility

./: .clang-format  .cmake-format.yaml  CMakeLists.txt  README.md  README_dependencies.md  conanfile.txt
.github/workflows/: ci.yml
configured_files/: config.hpp.in
src/: CMakeLists.txt  main.cpp
src/serial/: Message.cpp  Message.h  ResponseHandler.cpp  ResponseHandler.h  SerialCommunicationManager.cpp  SerialCommunicationManager.h  SerialPortHandler.cpp  SerialPortHandler.h
test/: CMakeLists.txt
